<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.moter.icomputer.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/data_structure_algorithm"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/data_structure_algorithm" />

        <Button
            android:id="@+id/operating_system"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/operating_system" />

        <Button
            android:id="@+id/programming"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/programming" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/database"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/database" />

        <Button
            android:id="@+id/computer_architecture"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/computer_architecture" />

        <Button
            android:id="@+id/network_data_communication"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/network_data_communication" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/logic_circuit"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/logic_circuit" />

        <Button
            android:id="@+id/software_engineering"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/software_engineering" />

        <Button
            android:id="@+id/subject_pedagogy"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/subject_pedagogy" />
    </LinearLayout>


</android.widget.LinearLayout>
